--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://localhost:8443"
+  "proxy": "http://localhost:8080"
 }
