--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
+    "react-bootstrap-table": "^4.0.1",
     "react-dom": "^15.6.1",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "react-tinymce": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
